removed utils.js and improved the form validation

--- a/project/index.html
+++ b/project/index.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="ui-field-contain">
                     <label for="add-phone">Phone</label>
-                    <input type="tel" id="add-phone" name="phone" required pattern="^[0-9()+\\-\\s]{6,}$" />
+                    <input type="tel" id="add-phone" name="phone" required pattern="^[0-9]{11}$" />
                 </div>
                 <div class="ui-field-contain">
                     <label for="add-email">Email</label>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="ui-field-contain">
                     <label for="edit-phone">Phone</label>
-                    <input type="tel" id="edit-phone" name="phone" required pattern="^[0-9()+\\-\\s]{6,}$" />
+                    <input type="tel" id="edit-phone" name="phone" required pattern="^[0-9]{11}$" />
                 </div>
                 <div class="ui-field-contain">
                     <label for="edit-email">Email</label>
